# Ray_tracing

./: CMakeLists.txt  LICENSE  README.md  output_a_image.cpp  render.cpp  test.cpp
include/basic/: camera.h  material.h  matrix3.h  object.h  random.h  ray.h  renderer.h  sky.h  transform.h  vec3.h  world.h
include/materials/: dielectric.h  lambertian.h  light.h  metal.h
include/objects/: cube.h  sphere.h
include/skys/: basicSky.h  blackSky.h
include/transforms/: blank.h  rotate.h
